@@ -61,48 +61,48 @@ complete_edges_list[] =
   { 2163000, 1, 0 },
 
   /* Group start block */
-  {    0,    1, 0 },
+  {    0,    1, 8 },
 
   /* Group end block */
-  {    0,    1, 0 },
+  {    0,    1, 8 },
 
   /* Jump block */
-  {    0,    1, 0 },
+  {    0,    1, 8 },
 
   /* Pure tone block skipped */
 
   /* Loop start block */
-  {    0,    1, 0 },
+  {    0,    1, 8 },
 
     /* Iteration 1 */
     {  837,  185, 0 },	/* Pure tone block */
-    {    0,    1, 0 },	/* Loop end block */
+    {    0,    1, 8 },	/* Loop end block */
 
     /* Iteration 2 */
     {  837,  185, 0 },	/* Pure tone block */
-    {    0,    1, 0 },	/* Loop end block */
+    {    0,    1, 8 },	/* Loop end block */
 
     /* Iteration 3 */
     {  837,  185, 0 },	/* Pure tone block */
-    {    0,    1, 0 },	/* Loop end block */
+    {    0,    1, 8 },	/* Loop end block */
 
   /* Stop tape if in 48K mode block */
-  {    0,    1, 4 },
+  {    0,    1, 12 },
 
   /* Text description block */
-  {    0,    1, 0 },
+  {    0,    1, 8 },
 
   /* Message block */
-  {    0,    1, 0 },
+  {    0,    1, 8 },
 
   /* Archive info block */
-  {    0,    1, 0 },
+  {    0,    1, 8 },
 
   /* Hardware info block */
-  {    0,    1, 0 },
+  {    0,    1, 8 },
 
   /* Custom info block */
-  {    0,    1, 0 },
+  {    0,    1, 8 },
 
   /* Pure tone block */
   {  820,  940, 0 },
@@ -116,7 +116,9 @@ test_return_t
 test_15( void )
 {
   return check_edges( DYNAMIC_TEST_PATH( "complete-tzx.tzx" ), complete_edges_list,
-		      LIBSPECTRUM_TAPE_FLAGS_STOP | LIBSPECTRUM_TAPE_FLAGS_STOP48 );
+		      LIBSPECTRUM_TAPE_FLAGS_STOP |
+		      LIBSPECTRUM_TAPE_FLAGS_STOP48 |
+		      LIBSPECTRUM_TAPE_FLAGS_NO_EDGE );
 }
 
 static test_edge_sequence_t
